# tick-cli

./: .gitignore  Cargo.toml  notes.md
.github/workflows/: ci.yml  release.yml  test.yml
pkg/brew/: custom_download_strategy.rb  tick-cli.rb
src/: add.rs  api.rs  args.rs  auth.rs  cache.rs  config.rs  create.rs  delete.rs  edit.rs  files.rs  http.rs  input.rs  lib.rs  list.rs  main.rs  repository.rs  send.rs  submit.rs  tick_client.rs
src/commands/: add.rs  auth.rs  delete.rs  edit.rs  list.rs  mod.rs  mv.rs  submit.rs
src/files/: entryFile.rs  files.rs  mod.rs
src/ui/: file.rs  mod.rs
