[package]
name = "tick-cli"
authors = ["Fadarrizz <github.com/Fadarrizz>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.2.7", features = ["derive"] }
confy = "0.5.1"
dialoguer = { version = "0.10.4", features = ["fuzzy-select"] }
reqwest = { version = "0.11.17", features = ["json", "blocking"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
dirs = "5.0"
itertools = "0.11.0"
